--- a/package.json
+++ b/package.json
@@ -10,12 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.3.2",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@skele/components": "^1.0.0-alpha.40",
     "expo": "~45.0.0",
+    "expo-av": "^11.2.3",
+    "expo-font": "^10.1.0",
+    "expo-navigation-bar": "~1.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-animated-nav-tab-bar": "^3.1.8",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-paper": "^4.12.2",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "0.17.7",
+    "react-on-screen": "^2.1.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
